--- a/Module_1_worksheet.ipynb
+++ b/Module_1_worksheet.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 2,
       "metadata": {
         "id": "3jwUcdXDXqKQ"
       },
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "id": "qnb4q6weYHJs"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {
         "id": "X9QwNVT2Yd8I"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "id": "WKU9pUMpY2t5"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "id": "_Pmm06fpZEka"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {
         "id": "jVcu1QS8bZHu"
       },
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {
         "id": "1-UuqETKbT-I"
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {
         "id": "7qptpnxFcM4e"
       },
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 10,
       "metadata": {
         "id": "lpnppkLqs4Oq"
       },
@@ -297,10 +297,10 @@
         {
           "data": {
             "text/plain": [
-              "3509"
+              "np.int64(3509)"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 11,
       "metadata": {
         "id": "gkjYZygrs-Va"
       },
@@ -340,7 +340,7 @@
               "       [ 0.,  0.,  1.]])"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -377,20 +377,137 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "hasQQa25tMt3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[ 2  3  5]\n",
+            " [ 7 11 13]\n",
+            " [17 19 23]]\n",
+            "2\n",
+            "23\n",
+            "[[ 20  30  50]\n",
+            " [ 70 110 130]\n",
+            " [170 190 230]]\n",
+            "[[5 4]\n",
+            " [3 4]]\n"
+          ]
+        }
+      ],
       "source": [
         "# TASK: Study and perform 3 different universal functions on v1\n",
+        "print(v1)\n",
+        "print(v1.min())\n",
+        "print(v1.max())\n",
         "\n",
+        "print(v1*10)\n",
         "\n",
-        "\n",
-        "\n",
+        "A = np.array([[1, 1],[0, 1]])\n",
+        "B = np.array([[2, 0],[3, 4]])\n",
+        "C = A @ B\n",
+        "print(C)\n",
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2])"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "A = np.arange(3)\n",
+        "A"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[7.38905610e+00, 2.00855369e+01, 1.48413159e+02],\n",
+              "       [1.09663316e+03, 5.98741417e+04, 4.42413392e+05],\n",
+              "       [2.41549528e+07, 1.78482301e+08, 9.74480345e+09]])"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.exp(v1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1.41421356, 1.73205081, 2.23606798],\n",
+              "       [2.64575131, 3.31662479, 3.60555128],\n",
+              "       [4.12310563, 4.35889894, 4.79583152]])"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.sqrt(v1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[ 0.90929743,  0.14112001, -0.95892427],\n",
+              "       [ 0.6569866 , -0.99999021,  0.42016704],\n",
+              "       [-0.96139749,  0.14987721, -0.8462204 ]])"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.sin(v1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
