--- a/Module_3_Logistic_Regression.ipynb
+++ b/Module_3_Logistic_Regression.ipynb
@@ -31,8 +31,7 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "# from utils import plot_data\n",
-        "from utils import *"
+        "from utils import plot_data"
       ]
     },
     {
