--- a/Module_5_Neural_Network.ipynb
+++ b/Module_5_Neural_Network.ipynb
@@ -237,7 +237,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "py310",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
