--- a/ChatBot_with_Database/OpenAI Tuned Model/LangChain_chatbot.ipynb
+++ b/ChatBot_with_Database/OpenAI Tuned Model/LangChain_chatbot.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,23 +42,23 @@
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model = ChatOpenAI(api_key =os.getenv(\"OPENAI_API_KEY\"),temperature=0,model=\"gpt-3.5-turbo\")\n",
+    "model = ChatOpenAI(api_key =os.getenv(\"OPENAI_API_KEY\"),temperature=0,model=\"gpt-4o-mini\")\n",
     "\n",
     "# model = ChatOpenAI(model=\"gpt-4o-mini\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Hello Deba! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 13, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-6b881be8-8be3-4e5a-b093-0000b633d3e4-0', usage_metadata={'input_tokens': 13, 'output_tokens': 11, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='Hello Deba! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 12, 'prompt_tokens': 13, 'total_tokens': 25, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-4b973825-6152-49ec-b8b2-f53651986349-0', usage_metadata={'input_tokens': 13, 'output_tokens': 12, 'total_tokens': 25, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"I'm sorry, I don't have access to that information.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 12, 'total_tokens': 25, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a5efb242-49bf-41ad-8ed1-edfddd02af6c-0', usage_metadata={'input_tokens': 12, 'output_tokens': 13, 'total_tokens': 25, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content=\"I'm sorry, I do not have access to personal information such as your name.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 12, 'total_tokens': 29, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-163af73c-cc12-46c7-a249-07740c431ab2-0', usage_metadata={'input_tokens': 12, 'output_tokens': 17, 'total_tokens': 29, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
      "execution_count": 4,
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Your name is Deba. How can I assist you today, Deba?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 37, 'total_tokens': 53, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-18c7b341-0661-4cbc-a75f-6626d13f27ef-0', usage_metadata={'input_tokens': 37, 'output_tokens': 16, 'total_tokens': 53, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='Your name is Deba. How can I assist you today, Deba?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 37, 'total_tokens': 53, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-320e7b18-4241-4d8c-8391-0341ce3da82e-0', usage_metadata={'input_tokens': 37, 'output_tokens': 16, 'total_tokens': 53, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
      "execution_count": 5,
@@ -140,21 +140,16 @@
     "from langgraph.checkpoint.memory import MemorySaver\n",
     "from langgraph.graph import START, MessagesState, StateGraph\n",
     "\n",
-    "# Define a new graph\n",
     "workflow = StateGraph(state_schema=MessagesState)\n",
     "\n",
-    "\n",
-    "# Define the function that calls the model\n",
     "def call_model(state: MessagesState):\n",
     "    response = model.invoke(state[\"messages\"])\n",
     "    return {\"messages\": response}\n",
     "\n",
     "\n",
-    "# Define the (single) node in the graph\n",
     "workflow.add_edge(START, \"model\")\n",
     "workflow.add_node(\"model\", call_model)\n",
     "\n",
-    "# Add memory\n",
     "memory = MemorySaver()\n",
     "app = workflow.compile(checkpointer=memory)"
    ]
@@ -232,7 +227,7 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "I'm sorry, I don't have access to that information.\n"
+      "I'm sorry, I do not have access to personal information such as your name. How can I assist you today?\n"
      ]
     }
    ],
@@ -262,7 +257,7 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "I'm sorry, I don't have access to personal information about users.\n"
+      "I'm sorry, I don't have access to that information.\n"
      ]
     }
    ],
@@ -436,7 +431,7 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "Our main product is Expand smERP, a cloud-based ERP solution designed to streamline operations for mid-sized Indian manufacturers and exporters. It offers features such as seamless integration with existing business processes, automation of complex tasks, user-friendly interface, secure data storage, integration with popular platforms, and customizable options to fit specific business needs. How can I help you with more information about Expand smERP or any other queries you may have?\n"
+      "Our main product is Expand smERP, a cloud-based ERP solution designed to streamline operations for mid-sized Indian manufacturers and exporters. It offers seamless integration with existing business processes, automation of complex tasks, a user-friendly interface, secure data storage on Microsoft Azure, integration with popular platforms like WhatsApp and Paytm, and customizable options to fit specific business needs. How can I help you learn more about Expand smERP?\n"
      ]
     }
    ],
@@ -472,7 +467,7 @@
       "   - ₹1800 per Concurrent User/Month\n",
       "   - Features: Lead Management, Sales Planning, Order to Cash, Procure to Pay, Approval Workflow, Product Catalogue, KPI Dashboard, Analytics Dashboard, Complete Accounting\n",
       "\n",
-      "Feel free to let me know if you need more details or have any specific questions about the pricing or features of Expand smERP!\n"
+      "Feel free to let me know if you need more information or assistance with our pricing plans!\n"
      ]
     }
    ],
@@ -725,14 +720,14 @@
     {
      "data": {
       "text/plain": [
-       "[SystemMessage(content=\"you're a good assistant\", additional_kwargs={}, response_metadata={}, id='dfedca44-b80b-461d-b13a-b542933afb19'),\n",
-       " HumanMessage(content='whats 2 + 2', additional_kwargs={}, response_metadata={}, id='c7c4ac2b-ee77-46b9-a911-e5736d11d4df'),\n",
-       " AIMessage(content='4', additional_kwargs={}, response_metadata={}, id='a79cc4cf-03aa-4e54-9c17-fe8c2983be18'),\n",
-       " HumanMessage(content='thanks', additional_kwargs={}, response_metadata={}, id='67d29492-432a-4ce3-9e3f-207fc80ed0fd'),\n",
-       " AIMessage(content='no problem!', additional_kwargs={}, response_metadata={}, id='86c4018a-0a8b-4daa-b66f-1978ba5efd40'),\n",
-       " HumanMessage(content='having fun?', additional_kwargs={}, response_metadata={}, id='e0b83b71-43c0-420e-981c-97e8306e4836'),\n",
-       " AIMessage(content='yes!', additional_kwargs={}, response_metadata={}, id='d6ba29d9-c231-46ab-8d05-24c3bdf1a22b'),\n",
-       " HumanMessage(content='tell its UOMID', additional_kwargs={}, response_metadata={}, id='98e60f45-dfa2-4623-a2ed-72e39a53a303')]"
+       "[SystemMessage(content=\"you're a good assistant\", additional_kwargs={}, response_metadata={}, id='3189c6fb-5ed4-4fe7-8e6e-87861d5791de'),\n",
+       " HumanMessage(content='whats 2 + 2', additional_kwargs={}, response_metadata={}, id='350d2a1a-9ddd-446e-823f-1ff1ba26aab4'),\n",
+       " AIMessage(content='4', additional_kwargs={}, response_metadata={}, id='453084fb-c8b2-485a-b4fe-64168c9badf2'),\n",
+       " HumanMessage(content='thanks', additional_kwargs={}, response_metadata={}, id='0317c833-06fa-486d-8428-f1d4bb39f9ae'),\n",
+       " AIMessage(content='no problem!', additional_kwargs={}, response_metadata={}, id='c23a556b-4cc7-4cf8-8d2b-c7241ddc6b53'),\n",
+       " HumanMessage(content='having fun?', additional_kwargs={}, response_metadata={}, id='1f31377b-e11e-4668-aacd-670de9eaa1c5'),\n",
+       " AIMessage(content='yes!', additional_kwargs={}, response_metadata={}, id='715e4c9c-3600-4d12-88b9-e257c3ac8cbc'),\n",
+       " HumanMessage(content='tell its UOMID', additional_kwargs={}, response_metadata={}, id='d2cbeab0-69ac-49fb-ab3f-0d66d771c7d9')]"
       ]
      },
      "execution_count": 28,
@@ -991,7 +986,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['b53e15ac-5d34-4a86-9f1c-e43d6c178401', '13761462-25ca-406b-abc9-d531c3b5fd0f', '842fb1eb-e1d4-430f-a606-51b93ea015af']\n"
+      "['09f89bb5-091b-43a5-b618-cabfcbfb79bb', '2ef40805-73ca-48da-a8f5-ea5d66b230f3', 'ae687848-d230-41b8-be2d-14c57735273b']\n"
      ]
     }
    ],
@@ -1079,7 +1074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Customer Preference is used to record the unique preferences of a customer, such as product identifications and specific charges. To create a new Customer Preference, go to CRM and click on Customer Preference to open the Customer Preference Detail page. In this page, you can add the required customer and enter details like Payment Terms, Inspection Clause, and Delivery Terms.\n"
+      "Customer Preference is used to record unique preferences of a customer, such as product identifications and specific charges. To create a new Customer Preference, go to CRM and click on Customer Preference to open the Customer Preference Detail page. In this page, you can add the required customer and enter details like Payment Terms, Inspection Clause, and Delivery Terms.\n"
      ]
     }
    ],
@@ -1133,7 +1128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To create a contact in the system, go to CRM, click on Contact, then New, and enter the contact details such as name, phone number, address, and email. Make sure to save the contact once all relevant data is entered. The contact can be further edited by opening it and making changes as needed.\n"
+      "To create a contact in the system, go to CRM, click on Contact, then New, and enter the contact name. Add phone number, address, and email details in the respective tabs. Once all relevant data is entered, click on Save to create the contact.\n"
      ]
     }
    ],
@@ -1189,7 +1184,7 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "WITH RankedProducts AS (SELECT ProdName, COUNT(*) AS EntryCount,ROW_NUMBER() OVER (ORDER BY COUNT(*) DESC) AS RowNum FROM PRODUCTS GROUP BY ProdName) SELECT Top 1 ProdName, COUNT(*) AS EntryCount FROM RankedProducts GROUP BY ProdName ORDER BY EntryCount DESC;\n"
+      "WITH RankedProducts AS (SELECT ProdName, COUNT(*) AS EntryCount,ROW_NUMBER() OVER (ORDER BY COUNT(*) DESC) AS RowNum FROM PRODUCTS GROUP BY ProdName) SELECT Top 1 ProdName, EntryCount FROM RankedProducts;\n"
      ]
     }
    ],
@@ -1200,6 +1195,33 @@
     "output = app.invoke({\"messages\": input_messages}, config)\n",
     "output[\"messages\"][-1].pretty_print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content='tell me which product has highest entries', additional_kwargs={}, response_metadata={}, id='67533d5a-e980-44cf-be04-6b3729985afd')]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
