--- a/Sales Prediction/Agent/Agent_for_sales.ipynb
+++ b/Sales Prediction/Agent/Agent_for_sales.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       "INFO:root:Starting stock analysis...\n",
       "ERROR:root:An error occurred during stock analysis.\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\eDominer\\AppData\\Local\\Temp\\ipykernel_16732\\1914624785.py\", line 44, in __call__\n",
+      "  File \"C:\\Users\\eDominer\\AppData\\Local\\Temp\\ipykernel_9244\\1110060412.py\", line 40, in __call__\n",
       "    X_train, X_test, y_train, y_test = train_test_split(\n",
       "                                       ^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\eDominer\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
@@ -804,6 +804,42 @@
     "recommendations = agent.get_recommendations()\n",
     "for rec in recommendations:\n",
     "    print(f'Recommendation: {rec[\"Recommendation\"]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using Actual Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading important Libraries\n",
+    "from langchain_groq import ChatGroq # Use the chat-based model\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "import openai\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Model\n",
+    "\n",
+    "load_dotenv()\n",
+    "openai.api_key = os.getenv(\"Groq_API_Key\")\n",
+    "\n",
+    "llm = ChatGroq(model=\"llama3-8b-8192\",temperature=0)"
    ]
   },
   {
