--- a/Sales Prediction/Agent/Agent/Agent_for_sales.ipynb
+++ b/Sales Prediction/Agent/Agent/Agent_for_sales.ipynb
@@ -807,6 +807,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using Actual Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading important Libraries\n",
+    "from langchain_groq import ChatGroq # Use the chat-based model\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "import openai\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Model\n",
+    "\n",
+    "load_dotenv()\n",
+    "openai.api_key = os.getenv(\"Groq_API_Key\")\n",
+    "\n",
+    "llm = ChatGroq(model=\"llama3-8b-8192\",temperature=0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
